@@ -1,31 +1,61 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<nrml xmlns="http://openquake.org/xmlns/nrml/0.4"
-      xmlns:gml="http://www.opengis.net/gml">
-    <sourceModel name="Classical Hazard QA Test, Case 1 source model">
-        <pointSource id="1" name="point source" tectonicRegion="active shallow crust">
-            <pointGeometry>
-                <gml:Point>
-                    <gml:pos>0.0 0.0</gml:pos>
-                </gml:Point>
-
-                <upperSeismoDepth>0.0</upperSeismoDepth>
-                <lowerSeismoDepth>10.0</lowerSeismoDepth>
-            </pointGeometry>
-
-            <magScaleRel>PeerMSR</magScaleRel>
-            <ruptAspectRatio>1.0</ruptAspectRatio>
-
-            <incrementalMFD minMag="4.0" binWidth="1.0">
-                <occurRates>1.0</occurRates>
-            </incrementalMFD>
-
-            <nodalPlaneDist>
-                <nodalPlane probability="1.0" strike="0.0" dip="90.0" rake="0.0" />
-            </nodalPlaneDist>
-
-            <hypoDepthDist>
-                <hypoDepth probability="1.0" depth="4.0" />
-            </hypoDepthDist>
-        </pointSource>
+<?xml version="1.0" encoding="utf-8"?>
+<nrml
+xmlns="http://openquake.org/xmlns/nrml/0.5"
+xmlns:gml="http://www.opengis.net/gml"
+>
+    <sourceModel
+    name="Classical Hazard QA Test, Case 1 source model"
+    >
+        
+        <sourceGroup
+        name="group 1"
+        tectonicRegion="active shallow crust"
+        srcs_weights="1.0"
+        >
+            <pointSource
+            id="1"
+            name="point source"
+            >
+                
+                <pointGeometry>
+                    
+                    <gml:Point>
+                        
+                        <gml:pos>
+                            0.0000000E+00 0.0000000E+00
+                        </gml:pos>
+                    </gml:Point>
+                    <upperSeismoDepth>
+                        0.0000000E+00
+                    </upperSeismoDepth>
+                    <lowerSeismoDepth>
+                        1.0000000E+01
+                    </lowerSeismoDepth>
+                </pointGeometry>
+                <magScaleRel>
+                    PeerMSR
+                </magScaleRel>
+                <ruptAspectRatio>
+                    1.0000000E+00
+                </ruptAspectRatio>
+                <incrementalMFD
+                binWidth="1.0000000E+00"
+                minMag="4.0000000E+00"
+                >
+                    
+                    <occurRates>
+                        1.0000000E+00
+                    </occurRates>
+                </incrementalMFD>
+                <nodalPlaneDist>
+                    
+                    <nodalPlane dip="9.0000000E+01" probability="1.0000000E+00" rake="0.0000000E+00" strike="0.0000000E+00"/>
+                </nodalPlaneDist>
+                <hypoDepthDist>
+                    
+                    <hypoDepth depth="4.0000000E+00" probability="1.0000000E+00"/>
+                </hypoDepthDist>
+            </pointSource>
+        </sourceGroup>
     </sourceModel>
 </nrml>
